# idgen

./: Cargo.toml  README.md  tauri.conf.json
.github/workflows/: release.yaml  tag.yaml
capabilities/: default.json  key-selector.json
icons/: icon.icns
src/: hotkeys.rs  lib.rs  main.rs
ui/: key-selector.html
