[package]
name = "keyclip"
version = "0.0.0" # Version is set to git tag on release
description = "A lightweight tool for instantly generating unique IDs directly to your clipboard."
authors = ["Daniel T. Rodrigues"]
edition = "2021"
homepage = "https://github.com/danitrod/keyclip"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "keyclip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"

[dependencies.uuid]
version = "1.16.0"
features = [
    "v4",
]
